[gd_scene load_steps=66 format=3 uid="uid://cak4yud372edf"]

[ext_resource type="Texture2D" uid="uid://cpev6odb4cqd4" path="res://assets/monster_pack_1_free/monster001eyes.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://dewsy8nsvceow" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://lluw6cj5llqb" path="res://scenes/hit-zone.tscn" id="3_4ra3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_drdry"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjuko"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh7k1"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4xvc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oy3q"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0drx6"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcfqo"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4pg3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lioqc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lg75"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsnsy"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_thsr5"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekh6n"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sbpf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kod"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_605iw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q4o"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tuss"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v6cf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vab5u"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiusc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie7m"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p1mj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya47j"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyejq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0dkt"]
atlas = ExtResource("1_7p1mj")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdxul"]
atlas = ExtResource("1_7p1mj")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7lhw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gst0f"]
atlas = ExtResource("1_7p1mj")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4rh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lniq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(336, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kxyuj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}],
"loop": false,
"name": &"death2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3vcr")
}],
"loop": true,
"name": &"dmg",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drdry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjuko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh7k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4xvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oy3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0drx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcfqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4pg3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f82d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lioqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lg75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsnsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thsr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekh6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sbpf")
}],
"loop": false,
"name": &"melee",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_605iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tuss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v6cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vab5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiusc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie7m")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p1mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyejq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0dkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdxul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7lhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gst0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lniq")
}],
"loop": true,
"name": &"walk2",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w3jn"]
size = Vector2(29, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ej62c"]
size = Vector2(11, 18)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_kxyuj")
animation = &"melee"
autoplay = "idle"

[node name="AtkZone" type="Area2D" parent="."]

[node name="Col_atk" type="CollisionShape2D" parent="AtkZone"]
position = Vector2(-7.5, -1)
shape = SubResource("RectangleShape2D_7w3jn")

[node name="Hit-zone" parent="." instance=ExtResource("3_4ra3w")]

[node name="Col_default" type="CollisionShape2D" parent="Hit-zone"]
position = Vector2(1.5, -1)
shape = SubResource("RectangleShape2D_ej62c")

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AtkZone" to="." method="_on_atk_zone_body_entered"]
[connection signal="body_exited" from="AtkZone" to="." method="_on_atk_zone_body_exited"]
